# physicslang

./: CREDITS.md  Cargo.toml  README.md
docs/: 00_NORTHSTAR_PhysicsLang_GravitationGrammar.md  01_porting_map.md  02_expanded_physics_knobs.toml  04_splat_scar_logic.md  05_best_raw_snippets.md  06_next_steps.md  README.md  SOURCES.md
examples/: forge_64d.rs  inversion_smoke.rs  latent_lang.rs  qwen_ab_charge.rs  qwen_particles.rs  step_smoke.rs
src/: embed.rs  lib.rs
